code improved with SonarLint